# FasterNTT

./: CMakeLists.txt  LICENSE  README.md  bench.cpp  bench_cmp_lib.cpp  bench_cmp_ntt_impl.cpp  prepare.sh  test.cpp
include/: Rq.hpp  Rq_param.hpp  csprng.hpp  number_theory.hpp  utils.hpp
include/core/: arith.hpp  arith_asm.hpp  arith_avx2.hpp  arith_sse.hpp  const.hpp  fntt.hpp  fntt_avx2.hpp  fntt_sse.hpp  ntt_LN16.hpp  ntt_S17.hpp  pmul.hpp  prime59.hpp  prime59_nfl.hpp  prime62_nfl.hpp  utils_simd.hpp
reduction_bench/: CMakeLists.txt  README.md  bench.h  bench64.c  cycle.h  gcc.h  param.h  test.h  test64.c  x86_64.h
